fix account query not showing
add provider to charts

--- a/src/index.css
+++ b/src/index.css
@@ -9,10 +9,6 @@
   font-family: Outfit;
 }
 
-:root {
-  --toastify-color-success: #111827 !important;
-}
-
 button:disabled:hover {
   cursor: default;
   animation: shake 0.6s cubic-bezier(.36,.07,.19,.97) both;
@@ -72,6 +68,7 @@ button:disabled:hover {
     --chart-4: 210 98% 78%;
     --chart-5: 212 97% 87%;
     --chart-6: 218 98% 78%;
+    --chart-7: 220 92% 60%;
     --radius: 0.5rem;
   }
   .dark {
@@ -105,6 +102,7 @@ button:disabled:hover {
     --chart-4: 210 98% 78%;
     --chart-5: 212 97% 87%;
     --chart-6: 218 98% 78%;
+    --chart-7: 220 92% 60%;
     --radius: 0.5rem;
   }
 }
